[gd_scene load_steps=4 format=3 uid="uid://tiheupku7jqi"]

[ext_resource type="Script" path="res://CanvasLayer.gd" id="1_d4igt"]
[ext_resource type="FontFile" uid="uid://bsnwlk551nbdb" path="res://Abaddon Light.ttf" id="2_btr6e"]

[sub_resource type="Shortcut" id="Shortcut_yrjuo"]

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_d4igt")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -167.0
offset_top = -177.5
offset_right = 167.0
offset_bottom = 177.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.227451, 0.164706, 0.329412, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
texture_filter = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.0
offset_top = -147.5
offset_right = 146.0
offset_bottom = 177.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Resume" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_btr6e")
theme_override_font_sizes/font_size = 28
shortcut = SubResource("Shortcut_yrjuo")
text = "Resume"

[node name="HBoxContainer3" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Options" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_btr6e")
theme_override_font_sizes/font_size = 28
text = "Options"

[node name="HBoxContainer4" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Menu" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_btr6e")
theme_override_font_sizes/font_size = 28
text = "Menu
"

[connection signal="pressed" from="ColorRect/VBoxContainer/HBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/HBoxContainer3/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/HBoxContainer4/Menu" to="." method="_on_quit_pressed"]
